Update promise foods page

--- a/src/projects/promise-foods.jade
+++ b/src/projects/promise-foods.jade
@@ -8,8 +8,7 @@ block variables
         var projectHeadline = " is the first organically grown, naturally caffinated apple.";
         var projectDetails = [
             "2015 - Present",
-            "SAIC MFA Show",
-            "Collaboration",
+            "Collaboration with <a href='//sites.lafayette.edu/reynolde'>Elaine Reyonlds</a>",
             "Tags: Art"
         ];
         var projectImageNames = [
@@ -37,3 +36,6 @@ block projectDescription
         p Coming soon: #[a(href="//promisefoods.us") promisefoods.us]
 
         p Contact: #[a(href="mailto:info@promisefoods.us") info@promisefoods.us]
+
+    +titledSection("Collaboration") 
+        p Promise Foods is a collaboration with #[a(href="//sites.lafayette.edu/reynolde") Elaine Reynolds].  The Promise Apple&reg; was shown from 04/25/15 - 05/13/15 at the School of the Art Institute of Chicago's MFA show, and is currently being shown from 09/17/16 - 02/26/17 at the 18th Annual Art &amp; Science Exhibition at the New York Hall of Science.
