Fixing broken // links that need to be HTTP

--- a/src/projects/codeabode-website.jade
+++ b/src/projects/codeabode-website.jade
@@ -39,7 +39,7 @@ block projectDescription
     +gallery(projectImagePath, projectImageNames, projectImageCaptions)
 
     +titledSection("Overview") 
-        p In collaboration with #[a(href="//rextwedt.com") Rex Twedt], I designed and implemented a modern, responsive website for CodeAbode, a Chicago-based, not-for-profit code school.
+        p In collaboration with #[a(href="http://rextwedt.com") Rex Twedt], I designed and implemented a modern, responsive website for CodeAbode, a Chicago-based, not-for-profit code school.
 
         p A live version of the design is hosted #[a(href="//codeabodechicago.github.io/CodeAbode-Website") here].
 
