--- a/src/projects/msp-game-design.jade
+++ b/src/projects/msp-game-design.jade
@@ -30,7 +30,7 @@ block projectDescription
     +gallery(projectImagePath, projectImageNames)
     
     +titledSection("Overview") 
-        p I designed and taught a middle school game design camp with #[a(href="//kaylalewis.net") Kayla Lewis] at the School of the Art Institute (SAIC). See the course #[a(href="//www.mspgamedesign.com/index.html") website] for more details and live versions of student projects.
+        p I designed and taught a middle school game design camp with #[a(href="http://kaylalewis.net") Kayla Lewis] at the School of the Art Institute (SAIC). See the course #[a(href="http://www.mspgamedesign.com/index.html") website] for more details and live versions of student projects.
 
         p Students explored the potential of games by creating three different types of games with three different technologies: platformer games using #[a(href="//www.stencyl.com") Stencyl] game maker; hand-drawn, point-and-click exploration games in HTML &amp; CSS; and interactive text games in JavaScript.
 
