--- a/src/projects/promise-foods.jade
+++ b/src/projects/promise-foods.jade
@@ -33,7 +33,7 @@ block projectDescription
 
         p In the spirit of organic, the Promise Apple&reg; is grown without pesticides and is harvested by hand locally in the Yakima Valley.  
 
-        p Coming soon: #[a(href="//promisefoods.us") promisefoods.us]
+        p Coming soon: #[a(href="http://promisefoods.us") promisefoods.us]
 
         p Contact: #[a(href="mailto:info@promisefoods.us") info@promisefoods.us]
 
