--- a/src/projects/ofbook.jade
+++ b/src/projects/ofbook.jade
@@ -25,6 +25,6 @@ block projectDescription
     +gallery(projectImagePath, projectImageNames)
     
     +titledSection("Overview") 
-        p ofBook is an open source book about creative coding in C++ using the #[a(href="//openframeworks.cc") openFrameworks] library. It covers everything from getting started to iOS applications to game design. ofBook is available online as a web book #[a(href="//openframeworks.cc/ofBook/chapters/foreword.html") here].
+        p ofBook is an open source book about creative coding in C++ using the #[a(href="http://openframeworks.cc") openFrameworks] library. It covers everything from getting started to iOS applications to game design. ofBook is available online as a web book #[a(href="http://openframeworks.cc/ofBook/chapters/foreword.html") here].
 
-        p I wrote two chapters on graphics for the book. #[a(href="//openframeworks.cc/ofBook/chapters/intro_to_graphics.html") "Introduction to Graphics"] is a chapter that guides the reader through the world of 2D graphics by creating complex forms from simple shapes. #[a(href="//openframeworks.cc/ofBook/chapters/intro_to_graphics.html") "Generative Meshes"] is a chapter about generating 3D graphics by applying simple rules to some data.
+        p I wrote two chapters on graphics for the book. #[a(href="http://openframeworks.cc/ofBook/chapters/intro_to_graphics.html") "Introduction to Graphics"] is a chapter that guides the reader through the world of 2D graphics by creating complex forms from simple shapes. #[a(href="http://openframeworks.cc/ofBook/chapters/generativemesh.html") "Generative Meshes"] is a chapter about generating 3D graphics by applying simple rules to some data.
