--- a/src/sass/_image-gallery.scss
+++ b/src/sass/_image-gallery.scss
@@ -18,7 +18,7 @@
         opacity: 0.95;
     }
 
-    .modal-close {            
+    .modal-close {
         position: absolute;
         top: 10px;
         right: 15px;
@@ -49,7 +49,7 @@
             text-align: center;
             font-style: italic;
             font-size: 23px;
-            font-weight: 300;     
+            font-weight: 300;
 
             .figure-number {
                 font-weight: 500;
@@ -78,11 +78,11 @@
             left: 0;
             transform: translate(-100%, -50%);
         }
-        
+
         .image-advance-right {
             right: 0;
             transform: translate(100%, -50%);
-        }        
+        }
     }
 
     @include breakpoint-and-down(sm) {
@@ -115,9 +115,9 @@
             .image-advance-left {
                 padding-right: 15px;
             }
-            
+
             .image-advance-right {
-                padding-left: 15px;            
+                padding-left: 15px;
             }
         }
 
@@ -144,14 +144,14 @@
             @include object-fit(cover);
         }
     }
-    
+
     .caption {
         text-align: center;
         font-style: italic;
         font-size: 18px;
         color: #616161;
         font-weight: 300;
-        margin-bottom: 20px;        
+        margin-bottom: 20px;
 
         .figure-number {
             font-weight: 500;
@@ -193,7 +193,7 @@
                     opacity: 0.5;
                     height: 100%;
                     @include object-fit(cover);
-                    transition: opacity 0.2s ease-in-out; 
+                    transition: opacity 0.2s ease-in-out;
                     cursor: pointer;
 
                     &:first-child {
@@ -241,9 +241,9 @@
             left: 0;
             padding-left: 0;
         }
-        
+
         .thumbnail-advance-right {
-            right: 0;            
+            right: 0;
             padding-right: 0;
         }
 
@@ -267,8 +267,8 @@
             .thumbnail-advance-left {
                 padding-left: 0;
             }
-            
-            .thumbnail-advance-right { 
+
+            .thumbnail-advance-right {
                 padding-right: 0;
             }
         }
@@ -280,18 +280,18 @@
         }
         .caption {
             font-size: 13px;
-        }   
+        }
     }
 }
 
 // Styling for specific images in the gallery
-.slideshow { 
+.slideshow {
     img {
         background-color: #fff;
     }
 
     #outside-large {
-        @include object-fit(cover, left);        
+        @include object-fit(cover, left);
     }
 
     #anderson-student-cards-large,
@@ -299,13 +299,13 @@
     #anderson-iteration-large {
         @include object-fit(contain);
     }
-    
-    #evolved-text-large, 
-    #elevate-text-large, 
-    #gras-letter-large, 
+
+    #evolved-text-large,
+    #elevate-text-large,
+    #gras-letter-large,
     #gras-notice-large {
         @include object-fit(contain);
-    }    
+    }
 
     #responsive-showcase-large,
     #hd-full-index-large,
@@ -347,6 +347,12 @@
     #laf-02-conditionals,
     #laf-04-image,
     #laf-05-video-bonus {
+        @include object-fit(contain);
+    }
+
+    #codevolve-1-large,
+    #reading-html-3-large,
+    #reading-css-09-large {
         @include object-fit(contain);
     }
 }
