--- a/src/projects/togetheroo.jade
+++ b/src/projects/togetheroo.jade
@@ -5,7 +5,7 @@ block variables
         var projectName = "togetheroo";
         var projectImagePath = "/images/projects/" + projectName + "/";
         var projectTitle = "";
-        var projectHeadline = "I built a real-time & interactive video chat platform that families.";
+        var projectHeadline = "I built a real-time & interactive video chat platform that connects families.";
         var projectDetails = [
             "2016 - Present",
             "Client: <a href='http://resonantgames.com'>Resonant Games</a>",
