--- a/src/projects/codeabode-teaching.jade
+++ b/src/projects/codeabode-teaching.jade
@@ -1,7 +1,7 @@
 extend ../jade-layouts/_project-page.jade
 
 block variables
-    - 
+    -
         var projectName = "codeabode-teaching";
         var projectImagePath = "/images/projects/" + projectName + "/";
         var projectTitle = "";
@@ -51,17 +51,28 @@ block variables
             "Server-Side JS Lab - Pirate Translation API and App"
         ];
 
+block metaOpenGraph
+    - const ogTitle = "Curriculum Director & Lead Instructor at CodeAbode";
+    - const ogDescription = "I designed the web development curriculum to teach beginners - with no programming background - the skills needed for both front-end and back-end development.";
+    //- Pulling image from codeabode-website for this one:
+    - const ogImage = `https://www.mikewesthad.com/images/projects/codeabode-website/hd-cropped-index-large.jpg`;
+    meta(property="og:type" content="website")
+    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:image" content=ogImage)
+    meta(property="og:title" content=ogTitle)
+    meta(property="og:description" content=ogDescription)
+
 block projectDescription
 
-    +titledSection("Overview") 
-        p CodeAbode was a non-profit code school that was dedicated to making learning web development accessible and affordable for everyone. 
+    +titledSection("Overview")
+        p CodeAbode was a non-profit code school that was dedicated to making learning web development accessible and affordable for everyone.
 
         p I designed the web development curriculum, taught 480 course hours across intensive day bootcamps &amp; night classes, and recieved an average instructor evaluation of 4.88 / 5 across my courses.
-    
+
     +gallery(projectImagePath, slideImages, slideCaptions)
 
-    
-    +titledSection("Curriculum") 
+
+    +titledSection("Curriculum")
         p I designed the web development curriculum to teach beginners &mdash; with no programming background &mdash;  the skills needed for both front-end and back-end development. The seqeunce of courses was:
 
             ul
@@ -77,18 +88,17 @@ block projectDescription
         p My classes were focused on teaching students how to problem solve and how to teach themselves, through hands-on demonstrations and assignments that guided students through the fundamental concepts. The goal was not to memorize a specific syntax, but rather to learn how to think and problem solve with code.
 
         p Example assignments and exercises below. Note: not all of these exercises are mobile-friendly.
-    
+
     .row.demo-grid
         each imageName, index in demoImages
             .col-sm-6
-                - 
+                -
                     var imageBase = imageName.split(".")[0].split("-");
                     imageBase.pop();
                     var link = "//www.mikewesthad.com/selected-teaching-demos/" + imageBase.join("-") + ".html";
                 +demoLink(link)
                     img(src=projectImagePath+imageName style="width: 100%")
                 .demo-caption #{demoCaptions[index]}
-        
+
     //- +gallery(projectImagePath, demoImages, demoCaptions)
 
-    
