--- a/src/projects/uptake-game-design.jade
+++ b/src/projects/uptake-game-design.jade
@@ -22,6 +22,16 @@ block variables
             "Platforming"
         ];
 
+block metaOpenGraph
+    - const ogTitle = "Game Design at Uptake's Internal University";
+    - const ogDescription = "I taught a \"Game Making in Unity\" elective for Uptake's internal company university. The one day class was a crash course introduction to working in 3D with a popular, cross-platform game engine called Unity.";
+    - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/scene-3-large.jpg`;
+    meta(property="og:type" content="website")
+    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:image" content=ogImage)
+    meta(property="og:title" content=ogTitle)
+    meta(property="og:description" content=ogDescription)
+
 block projectDescription
     +gallery(projectImagePath, projectImageNames, projectImageCaptions)
 
