Fixing opengraph url

--- a/src/projects/codeabode-teaching.jade
+++ b/src/projects/codeabode-teaching.jade
@@ -57,7 +57,7 @@ block metaOpenGraph
     //- Pulling image from codeabode-website for this one:
     - const ogImage = `https://www.mikewesthad.com/images/projects/codeabode-website/hd-cropped-index-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
