--- a/src/projects/cps-convergence.jade
+++ b/src/projects/cps-convergence.jade
@@ -49,7 +49,7 @@ block metaOpenGraph
     - const ogDescription = "I collaborated with instructors in Chicago Public Schools to build hands-on lessons that used art & technology to deepen learning and meet the CPS core standards.";
     - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/pollard-bot-design-2-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
