--- a/src/projects/laf-creative-coding.jade
+++ b/src/projects/laf-creative-coding.jade
@@ -29,7 +29,7 @@ block metaOpenGraph
     - const ogDescription = "I was invited to give a pair of workshops at Lafayette College on creative coding for the web. Each workshop was a crash course on being creative with JavaScript & p5.js.";
     - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/laf-02-conditionals-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
