--- a/src/projects/msp-game-design.jade
+++ b/src/projects/msp-game-design.jade
@@ -30,7 +30,7 @@ block metaOpenGraph
     - const ogDescription = "I designed and taught a middle school game design camp with Kayla Lewis at the School of the Art Institute (SAIC)";
     - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/working-5-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
