--- a/src/projects/saic-web-art.jade
+++ b/src/projects/saic-web-art.jade
@@ -14,9 +14,9 @@ block variables
 block metaOpenGraph
     - const ogTitle = "I taught Web Art at SAIC";
     - const ogDescription = "";
-    - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/google-frames.jpg`;
+    - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/google-frames-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
