--- a/src/projects/edovo.jade
+++ b/src/projects/edovo.jade
@@ -27,7 +27,7 @@ block metaOpenGraph
     - const ogDescription = "I created a pair of courses to help incarcerated individuals – who have no prior coding experience – start building employable, front-end web development skills.";
     - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/codevolve-1-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
