--- a/src/projects/togetheroo.jade
+++ b/src/projects/togetheroo.jade
@@ -17,7 +17,7 @@ block metaOpenGraph
     - const ogDescription = "I built a real-time & interactive video chat platform that connects families.";
     - const ogImage = `https://www.mikewesthad.com/images/projects/${projectName}/togetheroo-smoothie-cropped-large.jpg`;
     meta(property="og:type" content="website")
-    meta(property="og:url" content=`https://www.mikewesthad.com/${projectName}/`)
+    meta(property="og:url" content=`https://www.mikewesthad.com/projects/${projectName}/`)
     meta(property="og:image" content=ogImage)
     meta(property="og:title" content=ogTitle)
     meta(property="og:description" content=ogDescription)
