--- a/src/projects/gratuitous-gram.jade
+++ b/src/projects/gratuitous-gram.jade
@@ -26,10 +26,10 @@ block projectDescription
     +gallery(projectImagePath, projectImageNames)
     
     +titledSection("Overview") 
-        p The Gratuitous Gram is a food tent installation where visitors are invited to reconstruct iconic meals using nutrition labels as recipes. We provide raw ingredients for the big three macronutrients: shortening for fats, sugar for carbohydrates, and protein powder for protein. While techically edible, the resulting dishes were far from appetizing and highlight how little information the nutrition label provides. For more information, see the project's <a href="//gratuitousgram.wordpress.com/">website</a>.
+        p The Gratuitous Gram is a food tent installation where visitors are invited to reconstruct iconic meals using nutrition labels as recipes. We provide raw ingredients for the big three macronutrients: shortening for fats, sugar for carbohydrates, and protein powder for protein. While technically edible, the resulting dishes were far from appetizing and highlight how little information the nutrition label provides. For more information, see the project's <a href="//gratuitousgram.wordpress.com/">website</a>.
 
     +titledSection("Installation") 
-        p This piece was installated in the Easton Farmer's Market on July 14th 2014.  The installation was divided into two sections. One section had a display case with dishes reconstructed from local food establishments. The other section was a table where visitors could reconstruct their own dishses using raw ingredients and nutrition labels.
+        p This piece was installed in the Easton Farmer's Market on July 14th 2014.  The installation was divided into two sections. One section had a display case with dishes reconstructed from local food establishments. The other section was a table where visitors could reconstruct their own dishses using raw ingredients and nutrition labels.
 
     +fullWidthSection()      
         img(src=projectImagePath+"public-constructing-large.jpg" style="width: 100%")
