--- a/src/jade-layouts/_basic-page.jade
+++ b/src/jade-layouts/_basic-page.jade
@@ -21,9 +21,9 @@ block nav
             li
               a#work-link(href="/work.html") Work
                 .nav-underline
-            //- li
-            //-   a(data-ajax-link=true, href="/contact.html") Contact
-            //-     .nav-underline
+            li
+              a#contact-link(href="/contact.html") Contact
+                .nav-underline
 
 block footer
   footer#footer
