--- a/src/index.jade
+++ b/src/index.jade
@@ -7,5 +7,5 @@ block content
                 img(src="/images/mike-hadley-large.jpg")
             div.bio-statement.col-md-10.col-md-pull-2.col-sm-9.col-sm-pull-3.col-xs-12
                 p Hi, I'm Mike Hadley.
-                p I'm a developer, artist and educator based out of Chicago. I love creating, criticizing and teaching technology of all forms.
-                p This site is in the process of being updated! More recent works will be added soon. Thanks for being patient.
+                p I'm a #[a(href="/work.html?category=development" data-internal-link) developer], #[a(href="/work.html?category=teaching" data-internal-link) educator] and #[a(href="/work.html?category=art" data-internal-link) artist] who translates creative ideas into code and teaches others how to do the same. My mission is to make the world of technology more accessible – both in terms of who has access to learning materials as well as through introducing people to the creative side of technology.
+                p Have a creative vision that you want to bring to life? Get in touch and let's #[a(href="/contact.html" data-internal-link) chat].
