Add placeholder blog listing

--- a/src/jade-layouts/_basic-page.jade
+++ b/src/jade-layouts/_basic-page.jade
@@ -22,6 +22,9 @@ block nav
               a#work-link(href="/work.html") Work
                 .nav-underline
             li
+              a#blog-link(href="/blog.html") Blog
+                .nav-underline
+            li
               a#contact-link(href="/contact.html") Contact
                 .nav-underline
 
